# regnskapsnoter

./: .gitignore  Dockerfile.eval  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
docling-cascade-ocr/: README.md  pyproject.toml
docling-cascade-ocr/src/docling_cascade_ocr/: __init__.py  ledger.py  model.py  options.py  summary.py  token_vote.py  vote.py
docling-cascade-ocr/src/docling_cascade_ocr/voters/: __init__.py  base.py  docling_default_voter.py  doctr_voter.py  document_ai_voter.py  easyocr_voter.py  ocrmypdf_voter.py  paddleocr_voter.py  pix2struct_voter.py  tesseract_voter.py
docling-cascade-ocr/tests/: test_docling_default_voter.py  test_document_ai_voter.py  test_lazy_voter.py  test_metadata_propagation.py  test_model_integration.py  test_plugin_discovery.py  test_summary.py  test_token_vote.py  test_vote.py  test_voter_correlation.py  test_voters.py
docs/: empirical-validation-plan.md  migration-findings-2026-05-06.md
noter-canonicalizer/: README.md  pyproject.toml
noter-canonicalizer/src/noter_canonicalizer/: __init__.py  resolver.py
noter-canonicalizer/tests/: test_embedding.py  test_golden.py  test_nynorsk.py  test_resolver.py
noter-canonicalizer/tests/data/: golden_set.json
regnskap-no/: README.md  pyproject.toml
regnskap-no/src/regnskap_no/: __init__.py  api.py  extract.py  mcp_server.py  prompts.py  shacl.py
regnskap-no/src/regnskap_no/data/: axes.parquet  axis_members.parquet  calc_arcs.parquet  concept_hypercube.parquet  concepts.parquet  definitions.parquet  labels.parquet  mappings.parquet  references.parquet  regnskap-no.xsd  shapes.ttl  taxonomy.jsonld  taxonomy.ttl
regnskap-no/tests/: test_api.py  test_extract.py  test_mcp_server.py  test_prompts.py  test_shacl.py
regnskapsnoter-eval/: README.md  pyproject.toml
regnskapsnoter-eval/src/regnskapsnoter_eval/: __init__.py  cascade_provider.py  scoring.py  truth.py
regnskapsnoter-eval/tests/: test_cascade_provider.py  test_end_to_end.py  test_live_eval.py  test_scoring.py
regnskapsnoter-eval/tests/data/brreg_ground_truth/: 811573272.json  811602892.json  813322072.json  814747352.json  816582512.json  817303102.json  818359322.json  818751192.json  820246012.json  820746112.json
regnskapsnoter-migration/: README.md  pyproject.toml
regnskapsnoter-migration/src/regnskapsnoter_migration/: __init__.py  diff.py
regnskapsnoter-migration/tests/: test_diff.py
regnskapsnoter-pipeline/: README.md  pyproject.toml
regnskapsnoter-pipeline/src/regnskapsnoter_pipeline/: __init__.py  enrichment.py  pipeline.py
regnskapsnoter-pipeline/src/regnskapsnoter_pipeline/configs/: __init__.py  leaf_types.py
regnskapsnoter-pipeline/tests/: test_leaf_types_live.py  test_pipeline.py  test_writeback.py
regnskapsnoter-shacl/: README.md  pyproject.toml
regnskapsnoter-shacl/src/regnskapsnoter_shacl/: __init__.py  validator.py
regnskapsnoter-shacl/tests/: test_validator.py
regnskapsnoter-wadm/: README.md  pyproject.toml
regnskapsnoter-wadm/src/regnskapsnoter_wadm/: __init__.py  wadm.py
regnskapsnoter-wadm/tests/: test_wadm.py
regnskapsnoter-xbrl/: README.md  pyproject.toml
regnskapsnoter-xbrl/src/regnskapsnoter_xbrl/: __init__.py  emit.py
regnskapsnoter-xbrl/tests/: test_arelle.py  test_emit.py
scripts/: demo.py  deploy-eval-job.sh  eval_entrypoint.py  release.sh
tests/: test_publishing.py
