[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noter-canonicalizer"
version = "0.1.0"
description = "Map observed Norwegian noter labels to regnskap-no concept IDs (exact → fuzzy → embedding cascade)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sondre Skarsten"}]
dependencies = [
    "regnskap-no>=1.0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
embed = ["sentence-transformers>=2.7", "numpy>=1.24"]
all = ["rapidfuzz>=3.0", "sentence-transformers>=2.7", "numpy>=1.24"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"

[tool.hatch.build.targets.wheel]
packages = ["src/noter_canonicalizer"]
