[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noter-canonicalizer"
version = "0.1.0"
description = "Map observed Norwegian noter labels to regnskap-no concept IDs (exact → fuzzy → embedding cascade)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sondre Skarsten"}]
keywords = ["regnskap", "norwegian", "accounting", "label-resolution", "fuzzy-matching", "skos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Norwegian",
]
dependencies = [
    "regnskap-no>=1.0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
fuzzy = ["rapidfuzz>=3.0"]
embed = ["sentence-transformers>=2.7", "numpy>=1.24"]
all = ["rapidfuzz>=3.0", "sentence-transformers>=2.7", "numpy>=1.24"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"
Source = "https://github.com/sondreskarsten/regnskapsnoter/tree/main/noter-canonicalizer"
Issues = "https://github.com/sondreskarsten/regnskapsnoter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/noter_canonicalizer"]
