[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskap-no"
version = "1.0.3"
description = "Norwegian regnskap noter taxonomy as a Python wheel — 279 concepts, 4 axes, 97 calc arcs, IFRS-Full mappings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-4.0"}
authors = [{name = "Sondre Skarsten"}]
keywords = ["regnskap", "taxonomy", "xbrl", "skos", "wadm", "ifrs", "norwegian", "accounting"]
dependencies = [
    "pyarrow>=15.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
shacl = ["rdflib>=7.0", "pyshacl>=0.25"]
fuzzy = ["rapidfuzz>=3.0"]
embed = ["sentence-transformers>=2.7"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7"]

[project.scripts]
regnskap-no-mcp = "regnskap_no.mcp_server:main"

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"
Source = "https://github.com/sondreskarsten/regnskapnoter-taxonomy"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskap_no"]

[tool.hatch.build.targets.wheel.force-include]
"src/regnskap_no/data" = "regnskap_no/data"
