[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskap-no"
version = "1.0.3"
description = "Norwegian regnskap noter taxonomy as a Python wheel — 279 concepts, 4 axes, 97 calc arcs, IFRS-Full mappings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CC-BY-4.0"}
authors = [{name = "Sondre Skarsten"}]
keywords = ["regnskap", "taxonomy", "xbrl", "skos", "wadm", "ifrs", "norwegian", "accounting"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Natural Language :: Norwegian",
]
dependencies = [
    "pyarrow>=15.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
shacl = ["rdflib>=7.0", "pyshacl>=0.25"]
fuzzy = ["rapidfuzz>=3.0"]
embed = ["sentence-transformers>=2.7"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7"]

[project.scripts]
regnskap-no-mcp = "regnskap_no.mcp_server:main"

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"
Source = "https://github.com/sondreskarsten/regnskapnoter-taxonomy"
Issues = "https://github.com/sondreskarsten/regnskapsnoter/issues"
Documentation = "https://github.com/sondreskarsten/regnskapsnoter/blob/main/regnskap-no/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskap_no"]

[tool.hatch.build.targets.wheel.force-include]
"src/regnskap_no/data" = "regnskap_no/data"
