[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskapsnoter-eval"
version = "0.1.0"
description = "v2-fixture eval harness — score the cascade against BRREG live key_metrics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sondre Skarsten"}]
dependencies = [
    "docling-cascade-ocr>=0.1.0",
    "regnskap-no>=1.0.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.14"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskapsnoter_eval"]
