[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskapsnoter-migration"
version = "0.1.0"
description = "Shadow-mode runner + per-concept drift dashboards for v1 → v2 migration of Norwegian årsregnskap noter extractions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sondre Skarsten"}]
keywords = ["regnskap", "norwegian", "accounting", "migration", "drift-analysis", "shadow-mode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Norwegian",
]
dependencies = [
    "regnskap-no>=1.0.3",
    "pyarrow>=15.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"
Source = "https://github.com/sondreskarsten/regnskapsnoter/tree/main/regnskapsnoter-migration"
Issues = "https://github.com/sondreskarsten/regnskapsnoter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskapsnoter_migration"]
