[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskapsnoter-pipeline"
version = "0.1.0"
description = "End-to-end Docling pipeline configurations for Norwegian årsregnskap"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sondre Skarsten"}]
dependencies = [
    "docling>=2.30,<3",
    "docling-cascade-ocr>=0.1.0",
    "regnskap-no>=1.0.3",
    "noter-canonicalizer>=0.1.0",
    "regnskapsnoter-wadm>=0.1.0",
    "regnskapsnoter-shacl>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskapsnoter_pipeline"]
