[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regnskapsnoter-xbrl"
version = "0.1.0"
description = "Emit Inline XBRL (iXBRL) from regnskap-no facts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Sondre Skarsten"}]
keywords = ["xbrl", "ixbrl", "regnskap", "norwegian", "accounting"]
dependencies = [
    "regnskap-no>=1.0.3",
    "lxml>=4.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/sondreskarsten/regnskapsnoter"

[tool.hatch.build.targets.wheel]
packages = ["src/regnskapsnoter_xbrl"]
